[package]
name = "fuzz"
version = "0.1.0"
authors = ["samma"]
edition = "2018"
license="MIT"
readme="README.md"
repository="https://github.com/pigeonhands/fuzz-rs"
description="Rust fuzzer/buster."
keywords = ["buster", "pentesting", "web", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2.18", features=["fs", "io-util", "io-std", "sync", "time"] }
reqwest = { version = "0.10", features=["gzip", "cookies"] }
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.11"
base64 = "0.12.0"
